<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.company.mostafa.yts.DocsActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Title_Docs"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Intro_Docs"
            android:textSize="20dp"
            android:textStyle="italic" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Title_Docs1"
            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            android:textStyle="italic|bold" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/torrents_section" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/intro_disc2"
            android:textSize="20dp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/seedr_login" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/intro_disc3"
            android:textSize="20dp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/plus_button" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/intro_disc4"
            android:textSize="20dp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/add_from_url" />
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/confirm_upload" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/intro_disc5"
            android:textSize="20dp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/clickmovie" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/intro_disc6"
            android:textSize="20dp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/moviefinish" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/intro_disc7"
            android:textSize="20dp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/movievideo" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/choosesub" />

    </LinearLayout>
</ScrollView>