<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="#f6f5ed"
    android:id="@+id/rel_search"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.company.mostafa.yts.SearchActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/edt_Search"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/Search_button"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnQuality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/Quality_button"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/black"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/btnOrderBY"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/Cat_button"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/black" />

                <Button
                    android:id="@+id/btnRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/Ratings_button"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/black" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/btn_Prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adSearchView"
        android:layout_margin="4dp"
        android:background="@drawable/roundedbutton"
        android:layout_alignParentLeft="true"
        android:text="@string/prev"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/black" />

    <Button
        android:id="@+id/btn_Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/adSearchView"
        android:layout_margin="4dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/black" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adSearchView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4767740334220169/7068097113"></com.google.android.gms.ads.AdView>


</RelativeLayout>